--- a/style.css
+++ b/style.css
@@ -17,8 +17,6 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  scroll-behavior: smooth;
-  font-family: "NexaLight",
 }
 
 
@@ -28,6 +26,12 @@ section {
   display: flex;
   justify-content: center;
   align-items: center;
+  
+}
+
+body{
+  scroll-behavior: smooth;
+  font-family: "NexaLight";
 }
 
 
@@ -2164,7 +2168,7 @@ text-align: center;
   justify-content: center;
   align-items: center;
   color: #000;
-  font-family: Arial, sans-serif;
+  font-family: "NexaLight";
   font-size: 36px;
 }
 
