--- a/style.css
+++ b/style.css
@@ -710,8 +710,8 @@ margin-top: -10px;
     background-color: #f3e638;
     position: relative;
     margin-top: 85px;
-    padding: 30px 0px;
-    color: white;
+    padding: 30px 10px;
+    color: #000;
     z-index: 135;
    
   }
@@ -1355,31 +1355,38 @@ padding: 20px;
     height:400px;
     border-radius: 8px;
     background-image: url("./public/assets/images/book2.png");
-    background-size:contain;
+    background-size:cover;
     background-repeat: no-repeat;
     position: relative;
     overflow: hidden;
-    
   }
   
+
   /* Optionally, you can add this class to darken only specific notebooks */
 .mie_ride_features .notebook4 {
     filter: brightness(0.9);
   }
+
+  .mie_ride_features .notebook2 .notebook_ul_main{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+
+  }
   
 .mie_ride_features .notebook2 ul {
-width: 85%;
-position: absolute;
-/* left: 35px; */
-top: 30px;
-right: 0;
-overflow: hidden;
-padding: 15px;
+  width: 85%;
+  position: absolute;
+  /* left: 35px; */
+  top: 30px;
+  right: 0;
+  overflow: hidden;
+  padding: 15px;
   }
   
 .mie_ride_features .notebook2 ul li {
     line-height: 25px;
-    font-size: 18px;
+    font-size: 16px;
     list-style-type: none;
   }
   
