--- a/style.css
+++ b/style.css
@@ -1440,6 +1440,7 @@ padding: 20px;
     }
    .mie_ride_features .notebook2 ul li {
     font-size: 12px;
+    margin-bottom: 12px;
     line-height: 20px;
     }
   }
