--- a/style.css
+++ b/style.css
@@ -35,11 +35,11 @@ body{
   height: 100%;
 }
 
-@media screen and (max-width:1240px){
+/* @media screen and (max-width:1240px){
   section {
     height: 100%;  
   }
-}
+} */
 
 .header{
   position: absolute;
@@ -122,6 +122,7 @@ height: 2px;
   /* height: 100vh; */
   }
 
+
 .mie_ride_about .main_title_line{
   padding-top: 20px;
   padding-bottom: 20px;
@@ -170,8 +171,8 @@ height: 2px;
 @media screen and (max-width:991px) {
   
   .mie_ride_about{ 
-    padding-top: 60px;
-    padding-bottom: 50px;
+    padding-top: 40px;
+    padding-bottom: 30px;
     }
     .mie_ride_about_desc .mie_ride_about_desc_text p {
       padding: 10px;
